syntax="proto3";

package stores;

option go_package=".;foodpb";

message food{
    string itemName=1;
    string description=2;
    bool vegetarian=3;
    int64 price=4;
    string cuisine=5;
}

message createStoreRequest{
    string storeName=1;
    string street=2;
    string state=3;
    string country=4;
    string phoneNumber=5;
    string description=6;
    int64 pincode=7;
    string userID=8;
}

message createStoreResponse{
    string storeID=1;
    createStoreRequest addedStore=2;
}

message exploreOutletsRequest{
    string address=1;
}

message exporeOutletsResponse{
    string storeName=1;
    string street=2;
    string state=3;
    string description=4;
    string storeID=5;

}

message orderFoodRequest{
    string itemID=1;
    string storeID=2;
}

message orderFoodRespomse{
    string deliveryTime=1;
    string itemName=8;
    int64 price=2;
    string customerHouseNo=3;
    string customerStreet=4;
    string cutomerState=5;
    string customerPhoneNumber=6;
    int64 pincode=7;
}

message addItemsInStoreRequest{
    food Details=1;
    string userID=2;
    string storeID=3;
}

message addItemsInStoreResponse{
    string message=1;
}

message filterFoodRequest{
    int64 price=2;
    string cuisine=3;
    bool vegetarian=4;
    string name=5;
    string storeID=6;

}

message filterFoodResponse{
    food filtered=1;
}

message updateItemRequest{
    string itemID=1;
    string storeID=2;
    string userID=3;
    addItemsInStoreRequest UpdateItemDetail=4;

}
message updateItemResponse{
    addItemsInStoreResponse UpdateItemDetail=1;
}

message updateStoreRequest{
    string storeID=1;
    createStoreRequest updatedDetails=2;
}

message updateStoreResponse{
    createStoreResponse updatedDetails=1;
}
message deleteStoreRequest{
    string storeID=1;
    string userID=2;
}

message deleteStoreResponse{
    string message=1;
}
message deleteItemRequest{
    string itemID=1;
    string storeID=2;
    string userID=3;
}

message deleteItemResponse{
    string message=1;
}

message viewParticularStoreRequest{
    string storeID=1;
}
message viewParticularStoreResponse{
    string itemID=1;
    food foods=2;
}
message getItemDetailsRequest{
    string storeID=1;
    string itemID=2;
}
message getItemDetailsResponse{
    food details=1;
}

message checkOutRequest{
    string storeID=1;
    string itemID=2;
}

message checkOutResponse{
    string ItemName=1;
    int64 Price=2;
    string deliveryTime=3;
}

service storesService{
    rpc CreateStore(createStoreRequest) returns (createStoreResponse);
    rpc explore(exploreOutletsRequest) returns (stream exporeOutletsResponse);
    rpc OrderFood (orderFoodRequest) returns (orderFoodRespomse);
    rpc UpdateStoreDetails (updateStoreRequest) returns (updateStoreResponse);
    rpc UpdateItemDetail (updateItemRequest) returns (updateItemResponse);
    rpc FilterDish (filterFoodRequest) returns (stream filterFoodResponse);
    rpc NewItem (addItemsInStoreRequest) returns (addItemsInStoreResponse);
    rpc DeleteItem (deleteItemRequest) returns (deleteItemResponse);
    rpc deleteStore (deleteStoreRequest) returns (deleteStoreResponse);
    rpc ViewItemOfStore (viewParticularStoreRequest) returns (stream viewParticularStoreResponse);
    rpc GetItemDetail (getItemDetailsRequest)returns (getItemDetailsResponse);
    rpc Checkout (checkOutRequest) returns (checkOutResponse);

}